--- a/index.html
+++ b/index.html
@@ -8,44 +8,94 @@
 	
 </head>
 <body>
-	<section class="container">
-		<h2>Sobre Nós</h2>
-		<img class="img-responsive" src="img/tecno.jpg"> 
 
-		<div class="panel-group" id="paineis-sobre">
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h3 class="panel-title" data-toggle="collapse" data-target="#primeiro-paragrafo" data-parent="#paineis-sobre">Desde 2015</h3>
+	<header>
+		<nav class="navbar navbar-default">
+			<div class="container">
+
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#collapse-navbar" aria-expanded="false">
+			            <span class="sr-only">Toggle navigation</span>
+			            <span class="icon-bar"></span>
+			            <span class="icon-bar"></span>
+			            <span class="icon-bar"></span>
+			            <span class="icon-bar"></span>
+		       		</button>
+		       		<a class="navbar-brand" href="#">PublicSoft TECNOLOGIA</a>
+		       	</div>
+
+
+
+
+				<div class="collapse navbar-collapse" id="collapse-navbar">
+					<ul class="nav navbar-nav">
+					    <li><a href="#sobre-nos">Sobre Nós</a></li>
+					    <li><a href="#nossos-projetos">Nossos Projetos</a></li>
+					    <li><a href="#depoimentos">Depoimentos</a></li>
+					    <li><a href="#contato">Contato</a></li>
+					</ul>
 				</div>
-				<div id="primeiro-paragrafo" class="collapse">
-					<div class="panel-body">
-						<p>A nossa empresa, sediada em João Pessoa, Paraíba, está no mercado desde 2015 trabalhando com clientes de diversos portes como startups nacionais e internacionais, corporações, agências de publicidade e instituições de ensino.</p>
+		    </div>
+		</nav>
+	</header>
+
+
+
+	
+	
+
+
+	<section id="sobre-nos" class="container">
+		<h2>Sobre Nós</h2>
+
+		<div class="row">
+			<img class="img-responsive col-sm-6" src="img/tecno.jpg"> 
+
+			<div class="panel-group col-sm-6" id="paineis-sobre">
+				<div class="panel panel-default">
+					<div class="panel-heading" data-toggle="collapse" data-target="#primeiro-paragrafo" data-parent="#paineis-sobre">
+						<h3 class="panel-title">Desde 2015</h3>
+					</div>
+
+
+
+
+					<div id="primeiro-paragrafo" class="collapse  in">
+						<div class="panel-body">
+							A nossa empresa, sediada em João Pessoa, Paraíba, está no mercado desde 2015 trabalhando com clientes de diversos portes como startups nacionais e internacionais, corporações, agências de publicidade e instituições de ensino.
+						</div>
 					</div>
 				</div>
-			</div>
-			<div class="panel panel-default">	
-				<div class="panel-heading">
-					<h3 class="panel-title" data-toggle="collapse" data-target="#segundo-paragrafo" data-parent="#paineis-sobre">Preços acessíveis</h3>
-				</div>
-				<div id="segundo-paragrafo" class="collapse">
-					<div class="panel-body">
-						<p >Sistemas a partir de R$1000,00/mês.</p>
+
+
+				<div class="panel panel-default">	
+					<div class="panel-heading" data-toggle="collapse" data-target="#segundo-paragrafo" data-parent="#paineis-sobre">
+						<h3 class="panel-title" >Preços acessíveis</h3>
+					</div>
+
+					<div id="segundo-paragrafo" class="collapse">
+						<div class="panel-body">
+							Sistemas a partir de R$1000,00/mês.
+						</div>
 					</div>
 				</div>
-			</div>
-			
-			<div class="panel panel-default">
-				<div class="panel-heading">
-					<h3 class="panel-title" data-toggle="collapse" data-target="#terceiro-paragrafo" data-parent="#paineis-sobre">Alegria em colaborar com a sua cidade</h3>
-				</div>
-				<div id="terceiro-paragrafo" class="collapse">
-					<div class="panel-body">
-						<p>Com sistemas instalados em mais de 160 instituições, a PublicSoft possui sistemas em nuvem, que tornam qualquer ambiente, seja Windows ou Linux, capaz de utilizá-los.</p>
+				
+				<div class="panel panel-default">
+					<div class="panel-heading" data-toggle="collapse" data-target="#terceiro-paragrafo" data-parent="#paineis-sobre">
+						<h3 class="panel-title" >Alegria em colaborar com a sua cidade</h3>
+					</div>
+					<div id="terceiro-paragrafo" class="collapse">
+						<div class="panel-body">
+							Com sistemas instalados em mais de 160 instituições, a PublicSoft possui sistemas em nuvem, que tornam qualquer ambiente, seja Windows ou Linux, capaz de utilizá-los.
+						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
+
+
+
 	<div class="jumbotron">
 		<div class="container">
 			<h3>Mais de 20 prêmios em qualidade de software.</h3>
@@ -53,44 +103,52 @@
 		</div>
 	</div>
 
-	<section class="container">
+	<section id="nossos-projetos" class="container">
 		<h2>Nossos Projetos</h2>
+			<div class="row">
+				<div class="col-sm-6 col-md-4 col-lg-3">
+					<figure class="thumbnail ">
+						<img src="img/contabilidade.png" alt="Automacao residencial">
+						<figcaption class="caption">
+							<h3>CONTABILIDADE</h3>
+							<p>Sistema completo de contabilidade.</p>
+						</figcaption>
+					</figure>
+				</div>
+			
+			<div class="col-sm-6 col-md-4 col-lg-3">	
+			<figure class="thumbnail ">
+				<img src="img/tributos.png" alt="Automacao residencial">
+				<figcaption class="caption">
+					<h3>ARRECADAÇÃO DE TRIBUTOS</h3>
+					<p>Sistema de Arrecadação Tributária, dotado dos seguintes módulos: Imobiliário, Mercantil, DAM com emissão das guias para pagamento de IPTU, ISSQN, ITBI, Alvarás e todas as Taxas;</p>
+				</figcaption>
+			</figure>
+		</div>
 
-		<figure class="thumbnail">
-			<img src="img/contabilidade.png" alt="Automacao residencial">
-			<figcaption class="caption">
-				<h3>CONTABILIDADE</h3>
-				<p>Sistema completo de contabilidade.</p>
-			</figcaption>
-		</figure>
-
-		<figure class="thumbnail">
-			<img src="img/tributos.png" alt="Automacao residencial">
-			<figcaption class="caption">
-				<h3>ARRECADAÇÃO DE TRIBUTOS</h3>
-				<p>Sistema de Arrecadação Tributária, dotado dos seguintes módulos: Imobiliário, Mercantil, DAM com emissão das guias para pagamento de IPTU, ISSQN, ITBI, Alvarás e todas as Taxas;</p>
-			</figcaption>
-		</figure>
-
-		<figure class="thumbnail">
-			<img src="img/acao_social.png" alt="Automacao residencial">
-			<figcaption class="caption">
-				<h3>AÇÃO SOCIAL</h3>
-				<p>Controle das doações feitas pelas instituições para as pessoas carentes;</p>
-			</figcaption>
-		</figure>
-
-		<figure class="thumbnail">
-			<img src="img/contribuinte.png" alt="Automacao residencial">
-			<figcaption class="caption">
-				<h3>PORTAL DO CONTRIBUINTE</h3>
-				<p>Portal do contribuinte via web on-line;
-				Facilita os serviços prestados pela Prefeitura a população, permitindo emitir todos os tipos de Certidões Municipais;</p>
-			</figcaption>
-		</figure>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+			<figure class="thumbnail">
+				<img src="img/acao_social.png" alt="Automacao residencial">
+				<figcaption class="caption">
+					<h3>AÇÃO SOCIAL</h3>
+					<p>Controle das doações feitas pelas instituições para as pessoas carentes;</p>
+				</figcaption>
+			</figure>
+		</div>
+			<div class="col-sm-6 col-md-4 col-lg-3">
+			<figure class="thumbnail ">
+				<img src="img/contribuinte.png" alt="Automacao residencial">
+				<figcaption class="caption">
+					<h3>PORTAL DO CONTRIBUINTE</h3>
+					<p>Portal do contribuinte via web on-line;
+					Facilita os serviços prestados pela Prefeitura a população, permitindo emitir todos os tipos de Certidões Municipais;</p>
+				</figcaption>
+			</figure>
+		</div>
+	</div>
 	</section>
 
-<section>
+<section id="depoimentos">
 	<h2 class="container titulo-dep">Depoimentos de Clientes</h2>
 
 
@@ -104,27 +162,31 @@
 
 	  <!-- Wrapper for slides -->
 	  <div class="carousel-inner" role="listbox">
-	    <div class="item active">
+	    <figure class="item active">
 	      <img src="img/depoimentos.png">
-	      <div class="carousel-caption">
+	      <figcaption class="carousel-caption">
 	        <h3>Carlos Oliveira</h3>
 			<p>Muito satisfeito com o serviço prestado pela empresa.</p>
-	      </div>
-	    </div>
-	    <div class="item">
+	      </figcaption>
+	    </figure>
+
+
+	    <figure class="item">
 	      <img src="img/depoimentos.png">
-	      <div class="carousel-caption">
+	      <figcaption class="carousel-caption">
 	        <h3>Fernando Meireles</h3>
 			<p>Excelente trabalho e suporte eficiente.</p>
-	      </div>
-	    </div>
-	    <div class="item">
+	      </figcaption>
+	    </figure>
+
+
+	    <figure class="item">
 	      <img src="img/depoimentos.png">
-	      <div class="carousel-caption">
+	      <figcaption class="carousel-caption">
 	        <h3>Lucas Borba</h3>
 			<p>Equipe nota 10!</p>
-	      </div>
-	    </div>
+	      </figcaption>
+	    </figure>
 
 	    
 	  </div>
@@ -141,7 +203,10 @@
 	</div>
 </section>
 
-<section class="container">
+<div class="container">
+ <div class="row">
+
+<section id="contato" class="col-sm-6">
 	<h2>Contato</h2>
 	<p>Entre em contato conosco.</p>
 
@@ -150,6 +215,7 @@
 			<label for="contato-name">Nome:</label>
 			<input class="form-control" id="contato-name" type="text" placeholder="Seu Nome">
 		</div>
+		
 		<div class="form-group">
 			<label for="contato-email">Email:</label>
 			<div class="input-group">
@@ -157,6 +223,7 @@
 				<input type="email" class="form-control" id="contato-email" placeholder="Seu Email">
 			</div>
 		</div>
+
 		<div class="grupo-radio">
 			<div class="radio">
 				<label>
@@ -198,10 +265,12 @@
 	
 
 </section>
+</div>
+</div>
 
 <footer >
 <address>
-	<strong>PR Tecnologia</strong><br>
+	<strong>PublicSoft Tecnologia</strong><br>
 	Avenida Guarabira, 1300 Manaíra<br>
 	João Pessoa/PB<br>
 	Tel: (83) 5571-2751
@@ -209,12 +278,13 @@
 </address>
 
 <address>
-	Email: contato@rltecnologia.com.br
+	Email: contato@publictecnologia.com.br
 </address>
 </footer>
 
 
 <script type="text/javascript" src="jquery.js"></script>
 <script type="text/javascript" src="bootstrap/js/bootstrap.js"></script>
+<script src="assets/js/navbar-animation-fix.js"></script>
 </body>
 </html>
