Mudanca nas imagens

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<link rel="stylesheet" type="text/css" href="bootstrap/css/bootstrap.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" type="text/css" href="estilo.css">
+
 	
 </head>
 <body>
@@ -149,7 +150,7 @@
 	</section>
 
 <section id="depoimentos">
-	<h2 class="container titulo-dep">Depoimentos de Clientes</h2>
+	<h2 class="container" id="titulo-dep">Depoimentos de Clientes</h2>
 
 
 	<div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
@@ -181,7 +182,7 @@
 
 
 	    <figure class="item">
-	      <img src="img/depoimentos.png">
+	      <img class="d-block w-100" src="img/depoimentos.png">
 	      <figcaption class="carousel-caption">
 	        <h3>Lucas Borba</h3>
 			<p>Equipe nota 10!</p>
